Fix cards spacing on homepage for smaller screens

--- a/src/subtitulamos/resources/assets/css/index.scss
+++ b/src/subtitulamos/resources/assets/css/index.scss
@@ -183,6 +183,18 @@
       }
     }
 
+    #category-container {
+      #subtitle-cards-wrap {
+        padding: var(--spacing-s) 0;
+        border: none;
+
+        .subtitle-card {
+          margin: 0;
+          margin-bottom: var(--spacing-s);
+        }
+      }
+    }
+
     --navigation-chevron-width: 0px;
 
     #category-container {
